tests/src/frontend/syntax/invalid/explicit_targs3.sk
fun foo<T>(T): void {
  void
}

fun test(): void {
  _ = foo<Bool>(0);
  void
}
